--- a/src/components/post/Post.css
+++ b/src/components/post/Post.css
@@ -27,3 +27,28 @@
     padding: 20px;
 }
 
+.post__commentBox{
+  display: flex;
+  margin-top: 10px;
+}
+
+.post__input{
+  flex: 1;
+  border: 0;
+  padding: 10px;
+  border-top: 1px solid lightgray;
+
+}
+.post__button{
+  flex: 0;
+  border: 0;
+  border-top:1px solid lightgray ;
+  padding: 0 5px;
+  color: rgb(40, 85, 100);
+  cursor: pointer;
+}
+
+.post__comments{
+  padding: 20px;
+}
+
