--- a/src/App.css
+++ b/src/App.css
@@ -13,5 +13,20 @@
   background-color: white;
   padding: 20px;
   border-bottom: 1px solid lightgray;
+  display: flex;
+  justify-content: space-between;
+}
+.app__headerImage{
+  object-fit: contain;
+}
+.app__signup{
+  display: flex;
+  flex-direction: column;
 }
 
+.app__loginContainer{
+  display: flex;
+}
+.app__posts{
+  padding: 20px;
+}
